Fixed layout bug

--- a/Clue11/style.css
+++ b/Clue11/style.css
@@ -2,34 +2,6 @@ body {
     background-color: black;
 }
 
-/* .container {
-    width: 100%;
-    margin-right: auto;
-    margin-left: auto;
-}
-
-.youtube-video {
-    margin-top: 75px;
-    text-align: center;
-}
-
-iframe {
-    z-index: 3;
-    position: absolute;
-}
-
-img {
-    position: absolute;
-}
-
-.key {
-    z-index: 1;
-}
-
-.cover {
-    z-index: 2;
-} */
-
 .container {
     margin-top: 75px;
     position: relative;
